converted classes to singletons, need to fix issue with singleton class

--- a/Lab 1/OgreEngine/OgreEngine/OgreEngine.vcxproj.filters
+++ b/Lab 1/OgreEngine/OgreEngine/OgreEngine.vcxproj.filters
@@ -24,12 +24,27 @@
     <ClCompile Include="src\log_manager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\game_object.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\singleton.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\application.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\log_manager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\game_object.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\game_object_manager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\singleton.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
