--- a/OgreEngine/OgreEngine/OgreEngine.vcxproj.filters
+++ b/OgreEngine/OgreEngine/OgreEngine.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="src\script_game_object_methods.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\input_manager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\application.h">
@@ -96,6 +99,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\script_game_object_methods.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\component_input_listener.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\input_manager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\SDL_name_mappings.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
