progress on input manager, need to implement inputListenerComponent class, finish inputManager class with implementing controller functions, add functions to scene creation for looking and associating python script classes to exsisting or created objects.

--- a/OgreEngine/OgreEngine/OgreEngine.vcxproj
+++ b/OgreEngine/OgreEngine/OgreEngine.vcxproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ClCompile Include="src\application.cpp" />
     <ClCompile Include="src\component_camera.cpp" />
+    <ClCompile Include="src\component_input_listener.cpp" />
     <ClCompile Include="src\component_light.cpp" />
     <ClCompile Include="src\component_mesh.cpp" />
     <ClCompile Include="src\game_object.cpp" />
