--- a/OgreEngine/OgreEngine/OgreEngine.vcxproj.filters
+++ b/OgreEngine/OgreEngine/OgreEngine.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="src\input_manager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\component_input_listener.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\application.h">
